--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         android:background="@drawable/edittext_login"
         android:ems="10"
         android:gravity="center"
-        android:hint="email"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
@@ -95,7 +95,7 @@
         android:background="@drawable/edittext_login"
         android:ems="10"
         android:gravity="center"
-        android:hint="senha"
+        android:hint="Senha"
         android:inputType="textPassword"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
