--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -14,10 +14,7 @@
             android:id="@+id/button_Deslogar"
             android:layout_width="126dp"
             android:layout_height="wrap_content"
-            android:layout_margin="250dp"
-            android:layout_marginEnd="159dp"
-            android:layout_marginRight="110dp"
-            android:layout_marginBottom="100dp"
+            android:layout_gravity="center"
             android:text="Deslogar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
