--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.LoginActivity">
 
     <ImageView
         android:id="@+id/imageView3"
@@ -46,7 +46,9 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_EsqueceuASenha" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_EsqueceuASenha"
+        android:clickable="true"
+        android:focusable="true"/>
 
     <EditText
         android:id="@+id/editText_EmailLogin"
@@ -54,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="160dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:background="@drawable/edittext_login"
@@ -120,5 +122,11 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_EsqueceuASenha" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_EsqueceuASenha"
+        android:clickable="true"
+        android:focusable="true"/>
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
