--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,16 +13,16 @@
         android:text="Buscar"
         android:textSize="50sp"
         android:textStyle="bold"
-        android:layout_centerInParent="true"
+        android:layout_centerInParent="true">
 
-        >
+    </TextView>
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:background="?android:attr/windowBackground"
-            app:menu="@menu/bottomnavbar" />
+            app:menu="@menu/bottomnavbar"/>
 
-    </TextView>
 </RelativeLayout>
