--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,14 +8,16 @@
     android:layout_height="match_parent">
 
     <TextView
+        tools:ignore="ExtraText"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Buscar"
+        android:text="Perfil"
         android:textSize="50sp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"
+        android:textStyle="bold">
 
-        >
+    </TextView>
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNav"
             android:layout_width="match_parent"
@@ -23,5 +26,6 @@
             android:background="?android:attr/windowBackground"
             app:menu="@menu/bottomnavbar" />
 
-    </TextView>
+
+
 </RelativeLayout>
