--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -13,19 +13,21 @@
         android:text="Principal"
         android:textSize="50sp"
         android:textStyle="bold"
-        android:layout_centerInParent="true"
+        android:layout_centerInParent="true">
 
-    >
-        <Button
-            android:id="@+id/button_Deslogar"
-            android:layout_width="126dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Deslogar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-        <com.google.android.material.bottomnavigation.BottomNavigationView
+    </TextView>
+
+    <Button
+        android:id="@+id/button_Deslogar"
+        android:layout_width="126dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Deslogar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNav"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,9 +35,5 @@
             android:background="?android:attr/windowBackground"
             app:menu="@menu/bottomnavbar"
             />
-
-    </TextView>
-
-
 
 </RelativeLayout>
