--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".activity.PerfilActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:map="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
@@ -7,4 +13,13 @@ android:id="@+id/map"
 android:name="com.google.android.gms.maps.SupportMapFragment"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".activity.MapsActivity" />
+tools:context=".activity.MapsActivity"
+    />
+<com.google.android.material.bottomnavigation.BottomNavigationView
+android:id="@+id/bottomNav"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_alignParentBottom="true"
+android:background="?android:attr/windowBackground"
+app:menu="@menu/bottomnavbar" />
+</RelativeLayout>
