--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -7,34 +7,33 @@
     android:layout_height="match_parent"
     tools:context=".activity.PerfilActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Perfil"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        tools:ignore="ExtraText">
-
-    </TextView>
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        app:srcCompat="@drawable/bgperfil" />
 
     <Button
         android:id="@+id/button_Deslogar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center|center_horizontal|fill_horizontal"
+        android:layout_above="@+id/bottomNav"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="bottom|center|center_horizontal|fill_horizontal"
         android:layout_marginStart="180dp"
         android:layout_marginLeft="180dp"
-        android:layout_marginTop="520dp"
+        android:layout_marginTop="580dp"
         android:layout_marginEnd="100dp"
         android:layout_marginRight="100dp"
-        android:layout_marginBottom="100dp"
-        android:background="@drawable/buttonlogin"
+        android:layout_marginBottom="180dp"
+        android:background="@drawable/buttoncadastrese"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="Deslogar"
-        android:textColor="#FFFFFF"
+        android:textColor="#6200EA"
         android:textColorHint="#D50000"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -46,6 +45,89 @@
         android:layout_alignParentBottom="true"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/bottomnavbar" />
+
+    <Button
+        android:id="@+id/button_database_salvar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomNav"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="bottom|center|center_horizontal|fill_horizontal"
+        android:layout_marginStart="180dp"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="520dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginBottom="240dp"
+        android:background="@drawable/buttonlogin"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:shadowRadius="300"
+        android:text="Salvar"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#D50000"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="30sp"
+        android:text="Alterar dados"
+        android:textColor="#FFFFFF"
+        android:textSize="50sp"
+        android:textStyle="bold"
+        tools:ignore="ExtraText" />
+
+    <EditText
+        android:id="@+id/editText_EmailLogin"
+        android:layout_width="500dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/edittext_cadastrar"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+
+    <EditText
+        android:id="@+id/editText_NomeUsuarioCadastro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:background="@drawable/edittext_cadastrar"
+        android:ems="10"
+        android:gravity="center|center_vertical"
+        android:hint="Nome de Usuário"
+        android:inputType="textPersonName"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_editor_absoluteX="41dp" />
 
 
 </RelativeLayout>
